--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-
-
-server.port=6089
-
-spring.data.mongodb.uri=mongodb://localhost:27017/marketDB
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=marketDB
+server.port=9191
